# polymarket-watcher

./: .gitignore  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml
src/: analyze.py  config.py  main.py
src/alerting/: __init__.py  logger.py
src/analysis/: __init__.py  dashboard.py  profitability.py
src/api/: __init__.py  data_api.py  gamma_api.py  websocket.py
src/db/: __init__.py  models.py  repository.py
src/detection/: __init__.py  engine.py
src/detection/rules/: __init__.py  concentrated_betting.py  low_history.py  profitable_trader.py
tests/: __init__.py  test_anomaly_detection.py
